--- a/docs/1.homepage.md
+++ b/docs/1.homepage.md
@@ -1,5 +1,5 @@
 ---
-title: Systems Programming
+title: Secure Web Application Development
 slug: /
 ---
 import Link from '@docusaurus/Link';
@@ -7,25 +7,19 @@ import site from '@site/course.json'
 
 
 # Basics
-**Lab Section**: Mondays (see your schedule for specific time)    
-**Course Location**: Small discussions happen on the class Zoom, while the main video feed is broadcast via YouTube Live.      
-**Professor Office Hours**: 3:30 - 4:45 pm Tuesdays via [Zoom](https://uic.zoom.us/my/ckanich)    
-**Class**: 3:30 - 4:45 pm Thursdays via (videoconferencing system tbd)   
+**Course Time & Location**: 2:00 PM - 2:50 PM, SES 238      
+**Professor Office Hours**: TBD    
 **Instructor**: [Chris Kanich][ckanich]   
-**Office**: [Zoom](https://uic.zoom.us/my/ckanich) but I'm also available on MS Teams and discord      
+**Office**: SEO 908but I'm also available on MS Teams.      
 **Book**: Computer Systems, a programmer's perspective, by Randal E. Bryant and David R. O'Hallaron. Reading assignments will follow the 3rd edition.    
 
 <>Discussion: <Link to={site.discussion}>Piazza</Link></>
 
-**Graduate TAs**: Rohan Vardekar, Shubham Singh, Mohammad Ghasemisharif   
-**Office**: Check the TA calendar below for times and videoconferencing systems    
+**Graduate TAs**: Tejas Rajopadhye   
+**Office**: TBH 190, time TBD    
 
-**Undergraduate TAs**: Akhil Modi, Logan Scott, Spanya Shamasa    
-**Office**: Check the TA calendar below for times and videoconferencing systems    
-
-<iframe src="https://calendar.google.com/calendar/embed?src=c_pieebda51v6jvmaq7s0drsvg5g%40group.calendar.google.com&ctz=America%2FChicago" style={{border: 0}} width="100%" height="400" frameBorder="0" scrolling="no"></iframe>
 
 
 [pi]: http://mazur.harvard.edu/research/detailspage.php?rowid=8
 [ckanich]: mailto:ckanich@uic.edu
-[piazza]: {{site.discussion}}
+[piazza]: https://piazza.com/uic/fall2022/cs484/
