--- a/docs/3.syllabus.mdx
+++ b/docs/3.syllabus.mdx
@@ -4,184 +4,131 @@ slug: /syllabus
 keywords: 
   - syllabus
 ---
-import LatePolicy from './late-policy.md'
 
-This class is about two things. First, it's about the abstractions of the
-operating system that sit between your code and the hardware of the computer.
-Understanding how these features work allows you to make your programs fast and
-efficient beyond their Big-O runtime. 
 
-Second, this class is about critical thinking abd problem solving about
-practical computer science problems. The engineers who designed the operating
-systems we use today had to solve hundreds of hard engineering problems that no
-one had ever solved before. This course is designed to help you gain the
-problem solving skills necessary to solve hard practical computer science
-problems. This is directly appicable to three domains:
+Web applications are simultaneously one of the most widely used and widely 
+attacked forms of deployed code. At the same time, the concepts of computer 
+security are best taught within a relatable context so that students can 
+immediately apply their knowledge to relevant situations. The unique challenges 
+inherent in building secure web applications made available to billions of 
+potential users and attackers requires understanding how to use and integrate 
+concepts from software engineering, systems programming, and computer security. 
+This course integrates the concepts that underlie designing, deploying, 
+attacking, and defending web applications to provide students with a 
+foundational understanding of how to design and deploy scalable and secure web 
+applications. 
 
-1. You will be ready to reason about and design performant software systems, as
-   well as diagnose and solve problems throughout the software stack that
-   supports modern software (the software itself, along with its libraries,
-   operating system, computer hardware, and how those pieces interact).
-2. You will be ready to decompose and solve the types of questions that are
-   asked in technical interviews at many of the best employers of software
-   engineers.
-3. By practicing technical problem solving within a specific context, you train
-   yourself to better decompose, communicate about, reason about, and solve
-   technical problems more broadly.
+This class will teach students the concepts and techniques that enable web 
+applications to maintain high performance in the face of numerous users and 
+attackers. Students will learn and be able to apply software engineering 
+concepts to manage the complexity of client‐side and server‐side software. 
+Students will learn and be able to apply computer systems concepts to manage 
+the scalability of the web application, and provide performant service to large 
+numbers of simultaneous users. Students will learn and be able to apply 
+computer security concepts to designing a web application which is robust to 
+known and unknown attacks. Students will gain familiarity and facility with 
+modern tools which enable creating applications that apply the aforementioned 
+design, performance, and security concepts. Students will learn and be able to 
+apply fundamental security concepts so that they can evaluate the security of 
+future application designs in the face of potential future attacks. 
 
-In addition to oral and written problem solving exercises, there are also a
-collection of programming assignments. Completing these assignments will give
-you experience with the many steps along the path from source code to running
-program, memory management and virtual memory, process creation, communication
-and control, and a healthy dose of concurrent programming.
-
-By the end of this course, you will have a good understanding of the main
-elements that work together to form modern computing environments. You will
-have acquired some familiarity with standard diagnostic tools, debuggers,
-dynamic memory allocation, concurrent programming, and file I/O both with
-physical files and network sockets.
 
 
 ## Prerequisites
-The main conceptual prerequisites for this class are CS 211 (the C part), CS 261
-(machine organization), and CS 251 (data structures). A solid understanding of
-the theory of how things are stored in the computer, as well as the theory of
-how a processor executes instructions, as well as a basic understanding of
-programming (and specifically programming in C) are the tools you'll need to
-succeed in this class.
+While this course doesn’t require mastery of specific content from previous
+courses, it does require the ability to pick up new programming concepts
+quickly. Thus, CS 341 is a prerequisite, as JavaScript incorporates rather
+esoteric concepts like closures, functional programming, and quite a bit of
+event driven programming, and having seen these paradigms previously will be of
+great help. Learning new languages and new programming paradigms are common
+tasks in the life of a software engineer; learning how to apply your underlying
+ability to decompose and systematize a task using a new language will implicitly
+be part of your learning experience in this class.
+
 
 ## Course Announcements
 Whenever possible, course information will be conveyed using this website.
 Course discussion will happen via Piazza. Course assignments and assignment
 grades will be collected and returned through Gradescope. We will use
-(TBD) for synchronous class sessions. You are responsible
+iClicker cloud for in-class participation. You are responsible
 for checking this website for the reading schedule and ensuring that you
 complete all assignments, and keeping up to date on Piazza for any
 corrections/clarifications regarding assignments or other important
 information.
 
-## Peer Instruction 
-Typically, this course is taught using [Peer Instruction][pi], a teaching model
-which places stronger emphasis on classroom discussion and student interaction.
-This doesn't map so well onto remote instruction, but we will be trying to
-approximate it the best we can. Typical peer instruction consists of readings
-before class, a short beginning of class quiz, and a collection of discussion
-questions during class that you complete by yourself, discuss in small groups,
-and then discuss with the entire class.
+### Peer Instruction 
+This course will be taught using [Peer Instruction][pi], a teaching model which
+places stronger emphasis on classroom discussion and student interaction.  
 
-This semester, the regularly scheduled activities for class are:
-
-1. Throughout the week: there will be assigned readings and video lectures.
-1. Mondays: there is a synchronous, online, required lab session with a short
-   activity and a Gradescope quiz based on that activity that must be completed
-   by 5pm.
-2. Tuesdays: open Q&A office hours. During exam weeks, these will be exam review.
-3. Thursdays: Content quizzes are due at 12:30pm. Discussion questions are due at 12:30pm.
-   Discussion questions are **loosely** based on exam question style, structure, and content. During
-   class, we will **either** do an in class activity, or do the exam.
-1. Fridays: Homework assignments are due at 5pm. This will usually be on
-   Fridays but there are some exceptions to give you time to complete the
-   relevant homework before the related exam.
-
-Like peer instruction, we will still have required readings and required
-videos. Rather than having a quiz at the beginning of class, there will be a
-quiz graded for correctness each week based on that content. These will be
-released on Mondays and due at 12:30pm on Thursdays.
-
-Each week there will also be one set of discussion questions. These questions
-are meant to be considered by yourself, but you are encouraged to discuss the
-questions in small groups. You must answer these questions on Gradescope as
-well, but you will only be graded on completeness and effort, not on
-correctness. Each week's discussion question is only worth .13% of your grade,
-so don't stress if you miss them. However, thinking through the answers to
-these questions will help a lot on the exams.
+[pi]: http://mazur.harvard.edu/research/detailspage.php?rowid=8
+[ckanich]: mailto:ckanich@uic.edu
 
 ##  Homework late policy
 
-<LatePolicy />
+Every assignment in this course is due at exactly the time stated on Gradescope, and while we will
+grade late assignments, they earn zero credit.
+
+Gradescope deadlines are *precise* - an assignment is late if it was turned in one millisecond or
+one month late.
+
+Gradescope deadlines are *universal* - you must turn in your code, and it doesn't matter whether you
+didn't turn it in because it wasn't compiling, or couldn't upload it to git, or couldn't upload it
+to gradescope. You can turn in homework assignments an unlimited number of times, so we recommend
+that you turn them in early and often.
+
+Because these deadlines are so rigid, by default we will not include your lowest
+homework, and your three lowest discussion and quiz scores in your final grade for the class.
+The later assignments and exams in the course are more difficult than the earlier ones, and there is
+no exceptional late policy - we recommend that you do not use these unless you genuinely need to, so
+that they're available if unexpected issues come up.
+
+If your lowest homework, quizes or participations grades are higher than your course average, we will
+include them in the calculation of your final grade. This means that your lowest 
+homework and quizzes can't *hurt* your final grade, they can only help it, so it will  always be worth it to
+complete every assignment.
 
 
 ## Evaluation
-Grades are curved based on an aggregate course score. This means that the
-course score cut-offs for an A, B, C etc. are not defined ahead of time: these
-will be set after the end of the course. There is no quota for grade
-assignments, and there will be a hard "ceiling" for the curve of 90/80/70/60
-(i.e. the cutoff for an A will never be higher than 90% of all points possible
-in the course). Each individual quiz/problem set/homework/exam is worth the
-same as each other quiz/problem set/homework/exam - i.e. each of the 13 reading
-quizzes is worth 10%/13 ≈ .77% of your final grade.
+Grades are curved based on an aggregate course score. There are separate curves
+for graduate and undergraduate students. This means that the course score
+cut-offs for an A, B, C etc. are not defined ahead of time: these will be set
+after the end of the course.
 
 The course grade weighting is:
 
-| Task | % of total grade     |
-| ---- | ----------------     |
-| Video/reading quizzes (15, lowest two dropped)          | 10  |
-| Class activities (11, one dropped) | 8*  |
-| Discussion questions (11, one dropped) | 2 |
-| Lab activities (14, lowest two dropped)                  | 10  |
-| Homeworks (6, lowest is dropped)     | 30  |
-| Exams (5, lowest is dropped)         | 40  |
+| Task | % of total grade   |
+| ---- | ----------------   |
+| Reading Quizzes     | 10   |
+| Class Participation | 10   |
+| Homeworks           | 20  |
+| Final Project (1 checkpoint + 1 final presentation)      | 20 | 
+| Midterm            | 20  |
+| Final               | 20  |
 
-### Grade components
+###  READING QUIZZES
+ Reading quizzes will be given at the beginning of each class period using
+ iClickers. Everyone will have their lowest three quiz scores dropped.
 
-Reading quizzes, lab activities, homeworks, and exams are all graded for
-correctness. Homeworks are autograded using a script, so it is important that
-you submit your code early to (a) make sure you can successfully submit it and
-(b) that your code can pass the autograder tests. We do not give partial credit
-for incomplete or partially correct code. However, we do manually inspect and
-give full credit for anyone whose code works correctly, but was graded
-incorrectly due to the autograder. Please contact the instructors via Piazza if
-you think your homework was graded incorrectly.
+###  CLASS PARTICIPATION
 
-The Thursday session of this course is required; it is either the time we take
-an exam, or when we do in-class activities. You can achieve full participation
-credit for coming to class and participating in the activity (which will almost
-always be Kahoot or something Kahoot-like). You won't get class points for
-correct answers, only bragging rights. You can miss one of these sessions with
-no penalty.
+Participation is an incredibly important facet of this course. The baseline
+Class Participation grade will be based off of participating in classroom
+discussion questions and answering questions via iClicker.  (iClicker questions
+are graded for participation, not correctness.)  However, extra credit points
+may be added for substantial contributions, entirely at the instructor's
+discretion. Exceptional participation includes early reports of errors in
+assignments, helpful discussion on Piazza, contribution of helpful code to the
+common good of the class (e.g. test cases and/or testing scripts) and thoughtful
+discussions during lecture.
 
-The exams are broken out by class module. The first four happen during the
-semester, and the final exam slot is used for the fifth exam. While the exams
-aren't technically cumulative (you will not be tested directly on the same
-topic twice), the concepts in class build on each other and you are responsible
-for remembering and applying concepts from the previous modules on later exams.
+While class participation is a very effective way to successfully learn the material from this class, it is not a hard requirement. If you wish to forego attending class on a regular basis, your in class quiz and participation score will be computed as the higher of your final exam score and your achieved in-class score.
 
-
-[pi]: https://en.wikipedia.org/wiki/Peer_instruction
-[ckanich]: mailto:ckanich@uic.edu
-
-
-##  Class Participation
-
-Class participation is an incredibly important component of this course regardless of whether it is
-online or in person. Unfortunately, "participation" is very hard to grade. The 8% that you get from
-showing up on Thursdays is just from showing up - you're encouraged to participate, because it will
-help you do well on the exams, but there's no requirement that you talk a certain amount of times or
-anything like that. For the 2% that you get from the discussion questions, you aren't required to
-get the questions correct or write several paragraph long answers to get full credit.
-
-### Participation extra credit
-Students who meaningfully engage with each other, either through Piazza or during
-the class discussion sessions can raise their discussion grade up to a maximum of 18/8.
-Additionally, I will consider high quality discussion question answers for students who are very
-close to any grade cutoffs at the end of the semester. Submitting bug fixes or providing test cases
-for homework assignments can also earn extra credit. 
-
-## Textbook
-
-We will be using **Computer Systems, a programmer's perspective** by Randal E.
-Bryant and David R. O'Hallaron, 3rd edition, as our main textbook. We will be
-covering the content from Chapter 7 through the remainder of the book.
-
-You may also find **The C Programming Language** by Kernigan and Ritchie
-(colloquially referred to as K&R) a helpful reference when writing C programs.
-
-## Overcoming challenges enables growth
+### Overcoming challenges enables growth
 
 This is not a lecture-oriented class or one in which mimicking prefabricated
 examples will lead you to success. You will be expected to work actively to
 construct your own understanding of the topics at hand, with the readily
-available help of the instructors and your classmates. Many of the concepts you
+available help of the instructor and your classmates. Many of the concepts you
 learn and problems you work will be new to you and ask you to stretch your
 thinking. You will experience frustration and failure before you experience
 understanding. This is part of the normal learning process. Your viability as a
@@ -213,7 +160,18 @@ so that appropriate arrangements can be made. Support is available through the
 contact them to get your disability documented before accommodations can be
 made.
 
+## Religious observances
 
+Students who wish to observe their religious holidays shall notify the faculty
+member by the tenth day of the semester of the date when they will be absent
+unless the religious holiday is observed on or before the tenth day of the
+semester. In such cases, the students shall notify the faculty member at least
+five days in advance of the date when they will be absent. The faculty member
+shall make every reasonable effort to honor the request, not penalize the
+student for missing the class, and if an examination or project is due during
+the absence, give the student an exam or assignment equivalent to the one
+completed by those students in attendance. If the student feels aggrieved,
+they may request remedy through the campus grievance procedure.
 
 ##  Academic Integrity
 
