get rid of a bit more 361

--- a/docs/1.homepage.md
+++ b/docs/1.homepage.md
@@ -10,8 +10,8 @@ import site from '@site/course.json'
 **Course Time & Location**: 2:00 PM - 2:50 PM, SES 238      
 **Professor Office Hours**: TBD    
 **Instructor**: [Chris Kanich][ckanich]   
-**Office**: SEO 908but I'm also available on MS Teams.      
-**Book**: Computer Systems, a programmer's perspective, by Randal E. Bryant and David R. O'Hallaron. Reading assignments will follow the 3rd edition.    
+**Office**: SEO 908 but I'm also available on MS Teams.      
+**Book**: The internet   
 
 <>Discussion: <Link to={site.discussion}>Piazza</Link></>
 
