--- a/docs/3.syllabus.mdx
+++ b/docs/3.syllabus.mdx
@@ -121,7 +121,11 @@ assignments, helpful discussion on Piazza, contribution of helpful code to the
 common good of the class (e.g. test cases and/or testing scripts) and thoughtful
 discussions during lecture.
 
-While class participation is a very effective way to successfully learn the material from this class, it is not a hard requirement. If you wish to forego attending class on a regular basis, your in class quiz and participation score will be computed as the higher of your final exam score and your achieved in-class score.
+While class participation is a very effective way to successfully learn the
+material from this class, it is not a hard requirement. If you wish to forego
+attending class on a regular basis, your in class quiz and participation score
+will be computed as the higher of your final exam score and your achieved
+in-class score.
 
 ### Overcoming challenges enables growth
 
