--- a/docs/3.syllabus.mdx
+++ b/docs/3.syllabus.mdx
@@ -203,6 +203,10 @@ exam will result in failing the class. Egregious cheating on a programming
 assignment (including but not limited to purchasing a solution online) is also
 grounds for failing the class.
 
+Cheating on quizzes or exams are also grounds for failing the class. Please
+don't do it. Quizzes are worth a tiny fraction of your full course grade - do
+not put your hard work in jeopardy for a few tenths of a percent.
+
 I report all suspected academic integrity violations to the dean of students.
 If it is your first time, the dean of students allows you to informally resolve
 the case - this means the student agrees that my description of what happened is
