--- a/docs/1.homepage.md
+++ b/docs/1.homepage.md
@@ -8,7 +8,7 @@ import site from '@site/course.json'
 
 # Basics
 **Course Time & Location**: 2:00 PM - 2:50 PM, SES 238      
-**Professor Office Hours**: TBD    
+**Professor Office Hours**: 3-4:30 PM Mondays & Wednesdays    
 **Instructor**: [Chris Kanich][ckanich]   
 **Office**: SEO 908 but I'm also available on MS Teams.      
 **Book**: The internet   
@@ -16,7 +16,7 @@ import site from '@site/course.json'
 <>Discussion: <Link to={site.discussion}>Piazza</Link></>
 
 **Graduate TAs**: Tejas Rajopadhye   
-**Office**: TBH 190, time TBD    
+**Office**: TBH 190, 3pm-5pm Fridays    
 
 
 
