--- a/src/content/docs/schedule.mdx
+++ b/src/content/docs/schedule.mdx
@@ -1,17 +1,13 @@
 ---
 title: Schedule
 slug: schedule
+tableOfContents: false
 ---
 
 All assignment turnins are through the course gradescope page.
+Readings marked with 🧑‍🎓 are only required for graduate students; readings marked
+with 📵 will not be covered on the quiz.
 
-If I find or mention additional useful videos & web resources I'll add them to
-[this google
-doc](https://docs.google.com/document/d/1tmsZ4vDPQCUrHuhLAyIv-PAJE33_wqFPKb1Rg646AnE/edit)
-(UIC login required). Anyone can edit it so feel free to add resources you feel
-are helpful. This carries over resources from previous semesters so the dates
-probably won't match up.
-
-import Schedule from '../../components/Schedule.astro'
+import Schedule from "../../components/Schedule.astro";
 
 <Schedule />
