--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -15,10 +15,27 @@ hero:
     - text: Syllabus
       link: /syllabus/
       icon: document
+      variant: primary
 ---
 
 import ClassCardGrid from "../../components/ClassCardGrid.astro";
 
 ## Class coordinates
 
-day, time, location, important links
+Chris Kanich  
+Drop-In Office Hours: TBD  
+Drop-In Hours location: TBD
+
+Graduate TA: Saurav Joshi  
+Drop-In Office Hours (in-person or virtual): TBD  
+Drop-In Hours location: TBD
+
+**Course Modality and Schedule**:
+This course is taught in person, in BH 209, 3:00pm - 4:15pm Mondays and
+Wednesdays. Please bring your laptop for in-class activities.
+
+**Piazza**: https://piazza.com/uic/fall2023/cs484
+
+**Gradescope**: https://www.gradescope.com/courses/537130
+
+**Blackboard Course Site**: https://uic.blackboard.com/ultra/courses/_257305_1/cl/outline
