--- a/src/content/docs/schedule.mdx
+++ b/src/content/docs/schedule.mdx
@@ -4,9 +4,12 @@ slug: schedule
 tableOfContents: false
 ---
 
-All assignment turnins are through the course gradescope page.
-Readings marked with 🧑‍🎓 are only required for graduate students; readings marked
-with 📵 will not be covered on the quiz.
+All class meetings have a beginning of class quiz that starts promptly at 3 PM
+unless otherwise indicated.
+
+All assignment turnins are through the course gradescope page. Readings marked
+with 🧑‍🎓 are only required for graduate students; readings marked with 📵 will
+not be covered on the quiz.
 
 import Schedule from "../../components/Schedule.astro";
 
