--- a/src/content/docs/schedule.mdx
+++ b/src/content/docs/schedule.mdx
@@ -11,6 +11,10 @@ All assignment turnins are through the course gradescope page. Readings marked
 with 🧑‍🎓 are only required for graduate students; readings marked with 📵 will
 not be covered on the quiz.
 
+All content videos I record for this class will be in this list, but also will
+be added to the [CS 484 YouTube
+playlist](https://www.youtube.com/watch?v=XLdcXU8teKI&list=PLhy9gU5W1fvVzUp2rumzEFwG71mEPLrBt).
+
 import Schedule from "../../components/Schedule.astro";
 
 <Schedule />
