Updated the HW0 Description.

--- a/src/content/docs/homeworks/homework0.mdx
+++ b/src/content/docs/homeworks/homework0.mdx
@@ -200,9 +200,25 @@ contact us via the class discussion board ASAP.
 ## Points
 
 Each test is worth five points, each check is worth three points, for a total of
-29 points. Note that this implicitly tests your ability to download Node,
+23 points. Note that this implicitly tests your ability to download Node,
 install packages, edit files, upload to github, etc.
 
 This is almost certainly the easiest assignment, so I recommend you aim for full
 points. Getting this done should take less than a half an hour, even if you've
 never used JavaScript before.
+
+## UPDATE: Setting up Private Repostitory for Hosting
+
+As Netlify's policies don't allow for an Organization's Private Repository to be hosted, here is a way around getting your first assignment deployed.
+
+1.  Goto: [https://github.com/swad-cs-uic/homework0/](https://github.com/swad-cs-uic/homework0/)
+2.  Click Use this template to create your own **PRIVATE** repository. (You must create a Private Repository for academic integrity)
+3.  Clone this / Set up your created Repository, on your local.
+4.  Make changes to the code base as per the homework requirements.
+5.  Commit and push your changes to your repo.
+6.  Open Netlify and connect your GitHub repository and you're all set.
+
+Submitting your assignment to Gradescope:
+
+1.  While selecting the repository under Submission Method, choose the repository \[It's the one _that you just created, pushed changes to, and then connected with Netlify._\]
+2.  You should see the autograder firing up and see the result.
