put office hours on home page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,9 +22,9 @@ import ClassCardGrid from "../../components/ClassCardGrid.astro";
 
 ## Class coordinates
 
-Chris Kanich  
-Drop-In Office Hours: TBD  
-Drop-In Hours location: TBD
+Chris Kanich, ckanich@uic.edu  
+Drop-In Office Hours: 3-4pm Thursdays & Fridays  
+Drop-In Hours location: SEO 908 on Friday, [Zoom](https://uic.zoom.us/my/ckanich) on Thursday
 
 Graduate TA: Saurav Joshi  
 Drop-In Office Hours (in-person or virtual): TBD  
