exam and final project times

--- a/src/content/docs/homeworks/final project.0.mdx
+++ b/src/content/docs/homeworks/final project.0.mdx
@@ -1,5 +1,5 @@
 ---
-title: Final Project Pitch
+title: Final Project Pitch (checkpoint 0)
 description: How to submit your final project pitch
 due: "2023-09-06T15:00:00"
 release: "2023-08-23T11:00:00"
