Updated office hours. Fixed typo.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -27,8 +27,8 @@ Drop-In Office Hours: 3-4pm Thursdays & Fridays
 Drop-In Hours location: SEO 908 on Friday, [Zoom](https://uic.zoom.us/my/ckanich) on Thursday
 
 Graduate TA: Saurav Joshi  
-Drop-In Office Hours (in-person or virtual): TBD  
-Drop-In Hours location: TBD
+Drop-In Office Hours: 5-6:30pm Wednesdays  
+Drop-In Hours location: [Zoom](https://uic.zoom.us/my/saurav?pwd=Nk04VmJIM1oyc0ttNkU4aS82Kysvdz09)
 
 **Course Modality and Schedule**:
 This course is taught in person, in BH 209, 3:00pm - 4:15pm Mondays and
