--- a/src/content/docs/homeworks/final project.1.mdx
+++ b/src/content/docs/homeworks/final project.1.mdx
@@ -13,17 +13,16 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 
 **Due**: {formatTime(localizeTime(frontmatter.due))}
 
-## This document is a PLACEHOLDER. The deliverable details and deadline will be finalized by the previous checkpoint deadline.
-
 By the due date your team must:
 
 - Set up CI to host the built version of your team GH repository
   - Include a link to your deployed app in `README.md` so that I can take a look
-- Include a diagram (in text or drawn or however you please) of your tech stack:
+- **On the deployed website,** include a diagram (excalidraw preferred but you can use whatever) of your tech stack:
   - What services you will use to host (front end, back end, database)
   - What technologies you will use on the front end and back end
   - What APIs you will call out to
-- Include a short textual description of what MVP (minimum viable product) you will be aiming to complete by the end of week 13.
+- Include a short textual description of what MVP (minimum viable project) you will be aiming to complete by the end of Checkpoint 2.
+  - If you have any questions about whether your MVP is reasonable, please ask on Piazza or in office hours.
 
 This checkpoint is meant for keeping you moving forward on your project, and is
 not graded for points toward your final grade. However, if you don't submit this
