--- a/src/content/docs/homeworks/final project.0.mdx
+++ b/src/content/docs/homeworks/final project.0.mdx
@@ -33,3 +33,22 @@ Important things to remember:
   is totally fine. You won't be penalized either way. All code must be your own.
   GenAI assistance is OK, but let us know which one(s) you used and how you used
   them.
+
+# Project proposal required sections
+
+## What is the unique thing that your application _does_?
+
+## What makes it different than a CRUD app? I.e., what functionality does it provide that is not just a user interface layer on top of a database of user information,and the ability to view / add to / change that information?
+
+## What security and privacy concerns do you expect you (as developers) or your users to have with this application?
+
+# Project complexity
+
+Imagine you are doing a final project all by yourself in another class that
+requires 4 solid weeks of nothing-else-for-that-class work - that is 1 unit of
+complexity. My rough expectation is something like:
+
+- 1 person: 1.5 units
+- 2 people: 1.5 units
+- 3 people: 2.25 units
+- 4 people: 4 units
