--- a/src/content/docs/homeworks/homework1.mdx
+++ b/src/content/docs/homeworks/homework1.mdx
@@ -3,11 +3,16 @@ title: homework 1 - crud apps
 description: Express + SQLite
 due: "2023-09-08T15:00:00"
 github_link: https://classroom.github.com/a/d1FDyx0T
+solution_video: https://youtu.be/nlZ-GRQetbE
 release: "2023-08-28T22:00:00"
 ---
 
 import { localizeTime, formatTime } from "../../../utils.ts";
 import { Content as Deadlines } from "../../../components/Deadlines.md";
+
+Because the deadline has passed, heres a <a
+href="{frontmatter.solution_video}">solution video</a> you can watch to see how
+I would blind code this assignment.
 
 ## {frontmatter.description}
 
