Added Upcoming Course Content to Main Page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,6 +20,12 @@ hero:
 
 import ClassCardGrid from "../../components/ClassCardGrid.astro";
 
+## Upcoming Course Content
+
+import AbridgedSchedule from "../../components/AbridgedSchedule.astro";
+
+<AbridgedSchedule />
+
 ## Class coordinates
 
 Chris Kanich, ckanich@uic.edu  
