--- a/src/content/docs/homeworks/final project.2.mdx
+++ b/src/content/docs/homeworks/final project.2.mdx
@@ -11,12 +11,12 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 
 ## {frontmatter.description}
 
-## This document is a PLACEHOLDER. The deliverable details and deadline will be finalized by the previous checkpoint deadline.
+By {formatTime(localizeTime(frontmatter.due))}, you must:
 
-By {formatTime(localizeTime(frontmatter.due))}, your repository must:
-
+- Turn in a snapshot of your repository that includes a link to your deployed app in `README.md` this can be your main app URL, or a branch deploy.
 - Include a description of what your app currently does
-- Include a link to the deployment of your app in `README.md` - this can be your main app URL, or a branch deploy.
+- Ensure that a brand new user of the app can sign up, log in, and use those features
+  - If you need to manually grant developer permissions (i.e. for using an API, I know Google and Spotify both require this), please reach out to us before turn-in and ask us which username we will be signing up with.
 - Optional but helpful - include a screencast that shows your current functionality in action. I should be able to run the app myself when I visit it though.
 
-The entire final project is worth 15% of your grade. This deliverable is worth 5% - the final presentation will be worth 10%.
+The entire final project is worth 15% of your grade. This deliverable is worth 5% - the final deliverable will be worth 10%.
