More verbosity to HW3

--- a/src/content/docs/homeworks/homework3.mdx
+++ b/src/content/docs/homeworks/homework3.mdx
@@ -40,6 +40,8 @@ policy in this course.
   8.  Select Node.js and click generate new private key. The json file will be downloaded.
   9.  Once done, replace the keys from JSON file with the .env file accordingly.
 
+  #### 10. Make sure to enable Auth in your project. Go to your project, select Authentication under Build category. In the Sign-in method select Email/Password and enable it.
+
 - Make sure you have Java installed on your system. This is required for running Firebase emulator.
 - Open the terminal window and type in `npm install`. This will install all the dependencies listed in the `package.json` file and will create a folder `node_modules` where all these dependencies will be installed.
 - Next we install the firebase-tools and playwright chromium browser required for testing.
