--- a/src/content/docs/homeworks/homework5.mdx
+++ b/src/content/docs/homeworks/homework5.mdx
@@ -55,7 +55,7 @@ policy in this course.
 
 1. Optimize server.js.
 2. Generate flame-graph using `npm run flame-graph`
-3. Do the perf testing using `npm run load-test`
+3. Do the perf testing using `npm run load-test`. You need to have a running server for this. Run by `node server.js`
 4. Submit the following merged as a `SINGLE PDF`
    - Flame-graph
    - Screenshot for Artillery summary As shown below
