final commit for f23

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,6 +20,8 @@ hero:
 
 import ClassCardGrid from "../../components/ClassCardGrid.astro";
 
+# This is the Fall 2023 version of the course website.
+
 ## Class coordinates
 
 Chris Kanich, ckanich@uic.edu  
