table responsive again, added tailwind

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: Secure Web Application Development at UIC.
   image:
     alt: a person of indeterminate gender sitting alone in a bar at night working on a laptop in the style of nighthawks by edward hopper
-    file: ../../assets/hacking.png
+    file: ../../assets/hacking.webp
   actions:
     - text: Course Schedule
       link: /schedule/
@@ -20,24 +20,25 @@ hero:
 
 import ClassCardGrid from "../../components/ClassCardGrid.astro";
 
-# This is the Fall 2023 version of the course website.
-
 ## Class coordinates
 
-Chris Kanich, ckanich@uic.edu  
-Drop-In Office Hours: 3-4pm Thursdays & Fridays  
-Drop-In Hours location: SEO 908 on Friday, [Zoom](https://uic.zoom.us/my/ckanich) on Thursday
-
-Graduate TA: Saurav Joshi  
-Drop-In Office Hours: 5-6:30pm Wednesdays  
-Drop-In Hours location: [Zoom](https://uic.zoom.us/my/saurav?pwd=Nk04VmJIM1oyc0ttNkU4aS82Kysvdz09)
-
 **Course Modality and Schedule**:
-This course is taught in person, in BH 209, 3:00pm - 4:15pm Mondays and
-Wednesdays. Please bring your laptop for in-class activities.
+This course is taught in person, location TBD, 2:00pm - 3:15pm Tuesdays and Thursdays. Please bring your laptop (with battery if our classroom doesn't have plugs) for in-class activities.
 
-**Piazza**: https://piazza.com/uic/fall2023/cs484
+**Piazza**: https://piazza.com/uic/fall2024/cs484
 
-**Gradescope**: https://www.gradescope.com/courses/537130
+**Gradescope**: TBD
 
-**Blackboard Course Site**: https://uic.blackboard.com/ultra/courses/_257305_1/cl/outline
+**Blackboard Course Site**: TBD
+
+
+### Instructional Team
+
+Chris Kanich, ckanich@uic.edu  
+Drop-In Office Hours: 3:30-4:30pm Wednesdays and Thursdays  
+Drop-In Hours location: SEO 908
+
+Graduate TA: TBD  
+Drop-In Office Hours: TBD  
+Drop-In Hours location: TBD   
+
