dependency update, some ts error hunting

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,13 +23,11 @@ import ClassCardGrid from "../../components/ClassCardGrid.astro";
 ## Class coordinates
 
 **Course Modality and Schedule**:
-This course is taught in person, location TBD, 2:00pm - 3:15pm Tuesdays and Thursdays. Please bring your laptop (with battery if our classroom doesn't have plugs) for in-class activities.
+This course is taught in person, location LC C6, 2:00pm - 3:15pm Tuesdays and Thursdays. Please bring your laptop (with battery if our classroom doesn't have plugs) for in-class activities.
 
 **Piazza**: https://piazza.com/uic/fall2024/cs484
 
 **Gradescope**: TBD
-
-**Blackboard Course Site**: TBD
 
 
 ### Instructional Team
@@ -38,7 +36,7 @@ Chris Kanich, ckanich@uic.edu
 Drop-In Office Hours: 3:30-4:30pm Wednesdays and Thursdays  
 Drop-In Hours location: SEO 908
 
-Graduate TA: TBD  
+Graduate TA: Khanh Le  
 Drop-In Office Hours: TBD  
 Drop-In Hours location: TBD   
 
