--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -11,7 +11,7 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 ## {frontmatter.description}
 
 **Quickstart**: Accept the assignment via [GitHub
-Classroom](https://classroom.github.com/a/kGFywJmQ) to create a new **private**
+Classroom](https://classroom.github.com/a/ujVc9pwB) to create a new **private**
 repository in your account. This repository is automatically shared with the
 instructors so that we can see your code and help when needed. Make the changes
 described below, and then submit via Gradescope.  
