update for no github classroom

--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -10,11 +10,15 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 
 ## {frontmatter.description}
 
-**Quickstart**: Accept the assignment via [GitHub
-Classroom](https://classroom.github.com/a/ujVc9pwB) to create a new **private**
-repository in your account. This repository is automatically shared with the
-instructors so that we can see your code and help when needed. Make the changes
-described below, and then submit via Gradescope.  
+**Quickstart**: Accept the assignment by creating a **personal private
+repository** in GitHub using [the homework0 template
+repository](https://github.com/swad-cs-uic/homework0). This repository is
+**not** automatically shared with the instructors, so if you want us to see your code and help
+when needed, please share it with `kaytwo` and `nkgotcode`.
+To complete this assignment, make the changes described below, ensure that your
+web application is available on the Internet, and then submit via Gradescope.  
+
+
 **Due**: {formatTime(frontmatter.due)}
 
 By the end of this assignment you will have your own web app deployed on the web
@@ -198,14 +202,14 @@ the fun part - deploying our web app. You must deploy your web app to the
 Internet for full credit on this assignment. There are many free places to do
 so, including [Cloudflare
 Pages](https://developers.cloudflare.com/pages/framework-guides/deploy-anything/)
-or [Render](https://docs.render.com/static-sites). I recommend using one of
+and [Render](https://docs.render.com/static-sites). I recommend using one of
 those as they are the easiest to set up and have features we will use later on
-in class, but you can use Amazon, GitHub pages, or any other service as long as
-the web app can be deployed successfully and stays online (**we may re-run the
-autograder at any time!**). The one thing you may need to configure is the build
-command: we are using the [vite](https://vitejs.dev) build tool, so the command
-to build your code is `npm run build` and the files that should be served (the
-output of the build) are in `dist/`.
+in class, but you can use Amazon, Vercel, Netlify, GitHub pages, or any other
+service as long as the web app can be deployed successfully and stays online
+(**we may re-run the autograder at any time!**). The one thing you may need to
+configure is the build command: we are using the [vite](https://vitejs.dev)
+build tool, so the command to build your code is `npm run build` and the files
+that should be served (the output of the build) are in `dist/`.
 
 To get the next 10 points, you need to follow the instructions at any of those
 services and deploy your web page. They will give you a url that ends in
@@ -224,10 +228,11 @@ class. Great job! 🎉
 ### Submitting your work
 
 After you are confident that you are passing all of the tests, you can submit it
-via Gradescope. All the Gradescope autograder does is re-run the same tests
-again; if your tests are passing both on your local machine and on GitHub, it
-shouldn't fail on Gradescope. If you have issues with the autograder, please
-contact us via the class discussion board ASAP.
+via Gradescope. **Check Piazza for the Gradescope invitation code**. All the
+Gradescope autograder does is re-run the same tests again; if your tests are
+passing both on your local machine and on GitHub, it shouldn't fail on
+Gradescope. If you have issues with the autograder, please contact us via Piazza
+ASAP.
 
 <Deadlines />
 
