invite code reminder

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -42,7 +42,7 @@ This course is taught in person, location LC C6, 2:00pm - 3:15pm Tuesdays and Th
 
 **Piazza**: https://piazza.com/uic/fall2024/cs484
 
-**Gradescope**: https://www.gradescope.com/courses/833367
+**Gradescope**: https://www.gradescope.com/courses/833367  (Check Piazza for the invite code)
 
 ### Instructional Team
 
