--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -12,11 +12,12 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 
 **Quickstart**: Accept the assignment by creating a **personal private
 repository** in GitHub using [the homework0 template
-repository](https://github.com/swad-cs-uic/homework0). This repository is
-**not** automatically shared with the instructors, so if you want us to see your code and help
-when needed, please share it with `kaytwo` and `nkgotcode`.
-To complete this assignment, make the changes described below, ensure that your
-web application is available on the Internet, and then submit via Gradescope.  
+repository](https://github.com/swad-cs-uic/homework0) (click the "use this
+template" button). This repository is **not** automatically shared with the
+instructors, so if you want us to see your code and help when needed, please
+share it with `kaytwo` and `nkgotcode`. To complete this assignment, make the
+changes described below, ensure that your web application is available on the
+Internet, and then submit via Gradescope.  
 
 
 **Due**: {formatTime(frontmatter.due)}
@@ -59,10 +60,10 @@ assignments in this class.
 
 ### Local development
 
-After accepting the assignment using the link above, you will be given access to
-a repository containing the skeleton code. You can clone this repository in your
-development environment and open that directory in your favorite IDE. I
-recommend VS Code, as I will be using that for my demonstrations.
+After creating your own personal private repository using the template linked
+above, you can clone this repository in your development environment and open
+that directory in your favorite IDE. I recommend VS Code, as I will be using
+that for my demonstrations.
 
 #### Installing Node.js
 
