clarify schedule fixes #26

--- a/src/content/docs/schedule.mdx
+++ b/src/content/docs/schedule.mdx
@@ -5,7 +5,8 @@ tableOfContents: false
 ---
 
 All class meetings have a beginning of class quiz that starts promptly at 2 PM
-unless otherwise indicated.
+unless otherwise indicated. The quiz will be about the topics listed on that
+day's entry in the schedule.
 
 All assignment turnins are through the course gradescope page. Readings marked
 with 🧑‍🎓 are only required for graduate students; readings marked with 📵 will
