--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,8 +24,8 @@ import { Aside } from "@astrojs/starlight/components"
 
 
 { new Date() < new Date("2024-09-06T17:00:00-05:00") && 
-<Aside type="tip" title="Interested in registering for CS 484 in Fall 2024?">
-If you're interested in registering for this class, please attend all lectures and turn in all assignments. Students can't register after week 1 without attending the first two classes and receiving instructor permission.
+<Aside type="caution" title="Interested in registering for CS 484 in Fall 2024?">
+If you're interested in registering for this class, you must have turned in the first assignment due on Thursday August 29th. If you did and aren't in the class yet, please follow the instructions mentioned in class and on Piazza.
 </Aside>
 }
 
