--- a/src/content/docs/schedule.mdx
+++ b/src/content/docs/schedule.mdx
@@ -8,6 +8,9 @@ All class meetings have a beginning of class quiz that starts promptly at 2 PM
 unless otherwise indicated. The quiz will be about the topics listed on that
 day's entry in the schedule.
 
+All readings will be posted as soon as possible, and anything not posted 24
+hours before class starts won't be on the quiz.
+
 All assignment turnins are through the course gradescope page. Readings marked
 with 🧑‍🎓 are only required for graduate students; readings marked with 📵 will
 not be covered on the quiz.
