--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -3,6 +3,8 @@ title: homework 0 - calibration & assignment turn in
 description: Deploy and test your first web app
 due: "2024-08-29T14:00:00"
 release: "2024-08-26T08:00:00"
+sidebar:
+  order: 10
 ---
 
 import { formatTime } from "../../../utils.ts";
