interpolation in links is broken

--- a/src/content/docs/homeworks/final project proposal.mdx
+++ b/src/content/docs/homeworks/final project proposal.mdx
@@ -119,10 +119,11 @@ without spending much / any money on hosting/services.
 ### Deliverables
 
 The two deliverables are your repository (it can be empty, but you can also get
-started on it if you want), and submitting [This form]({frontmatter.form_url}).
-Remember that this assignment is not worth any points, but if you don't get
-started finding a good project idea, I will be grading your later checkpoints
-based on my personal opinion rather than the expectations that we set together.
+started on it if you want), and submitting [This
+form](https://forms.gle/8GUcdZcUf9jrcX6W9). Remember that this assignment is not
+worth any points, but if you don't get started finding a good project idea, I
+will be grading your later checkpoints based on my personal opinion rather than
+the expectations that we set together.
 
 ### What happens if you don't turn in the checkpoint?
 
