deadline up front

--- a/src/content/docs/homeworks/homework 2.mdx
+++ b/src/content/docs/homeworks/homework 2.mdx
@@ -15,7 +15,7 @@ import { marked } from "marked";
 
 **Release**: {formatTime(localizeTime(frontmatter.release))}
 
-{/* **Due**: {formatTime(localizeTime(frontmatter.due))} */}
+**Due**: {formatTime(localizeTime(frontmatter.due))}
 
 ## Quickstart
 
