ordering and dependnecy check

--- a/src/content/docs/homeworks/homework 2.mdx
+++ b/src/content/docs/homeworks/homework 2.mdx
@@ -3,6 +3,8 @@ title: Homework 2 - Frontend
 description: React
 release: "2024-09-24T08:00:00"
 due: "2024-10-04T14:00:00"
+sidebar:
+  order: 32
 ---
 
 import { localizeTime, formatTime } from "../../../utils.ts";
