Added Office Hours

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -54,3 +54,6 @@ Graduate TA: Khanh Le
 Drop-In Office Hours: TBD  
 Drop-In Hours location: TBD   
 
+Graduate TA: Claudio Paloscia, cpalos2@uic.edu  
+Drop-In Office Hours: 10:00-11:00am Thursdays  
+Drop-In Hours location: CS Lounge
