Client-side dynamic updates

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -63,3 +63,5 @@ Drop-In Hours location: CS Lounge and [Zoom](https://uic.zoom.us/j/83302203414?p
 Graduate TA: Claudio Paloscia, cpalos2@uic.edu  
 Drop-In Office Hours: 10:00-11:00am Thursdays  
 Drop-In Hours location: CS Lounge
+
+<ClassCardGrid />
